fix: [ios] fix left margin of modals which made them overflow on ios
fix: [ios] add top margin to modals to avoid overlap with menu on ios

On mobile, left margin caused modals to overflow on the right of the
screen.

On mobile again, top margin for devices that have a top screen offset 
was not set correctly and would cause the modals to show underneath the
top menu.

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -385,6 +385,7 @@ span.custom-card-destinataire {
   max-height: calc(90vh - 60px);
   max-width: 400px;
   overflow-y: auto;
+  margin: 0;
 
   @media screen and (max-width: 480px) {
     width: 95%;
